examples/test/testpolicy6950.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6950
  namespace: namespace200
spec:
  podSelector:
    matchLabels:
      key1: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value47
          key28: value13
          key0: value10
      podSelector:
        matchLabels:
          key14: value22
